--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
